Recoding new system:  - new config  - new packages