@@ -6,6 +6,7 @@ import org.bukkit.entity.Player;
 import pl.techbrat.spigot.helpop.HelpOPTB;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class BungeePlayerListDownloader {
@@ -20,7 +21,7 @@ public class BungeePlayerListDownloader {
 
     public void setPlayers(String[] players) {
         this.players.clear();
-        this.players.addAll(List.of(players));
+        this.players.addAll(Arrays.asList(players));
     }
     public void setPlayers(ArrayList<String> players) {
         this.players = players;
